--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.486</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>1.548</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
   <groupId>ru.yandex.jenkins.plugins.debuilder</groupId>
@@ -96,6 +96,16 @@
         <optional>true</optional>
     </dependency>
 
+    <dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>[1.7,2.0)</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-net</groupId>
+    	<artifactId>commons-net</artifactId>
+    	<version>[3.3,4.0)</version>
+    </dependency>
   </dependencies>
 
   <build>
