--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
     <dependency>
         <groupId>org.jenkins-ci.main</groupId>
         <artifactId>remoting</artifactId>
-        <version>2.17</version>
+        <version>[2.17,3.0)</version>
         <optional>true</optional>
     </dependency>
 
@@ -105,6 +105,11 @@
     	<groupId>commons-net</groupId>
     	<artifactId>commons-net</artifactId>
     	<version>[3.3,4.0)</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>[1.4.4,1.5)</version>
     </dependency>
   </dependencies>
 
